ports/c/include/simulant/c/application_ext.h

typedef struct {
    /* Called once during startup, before the main loop; return false to
     * abort startup. NULL is equivalent to "do nothing, return true". */
    bool (*init)(smlt_application_t* self, void* user_data);

    /* Called before window construction; return false to abort startup.
     * NULL is equivalent to "do nothing, return true". */
    bool (*pre_init)(smlt_application_t* self, void* user_data);

    void (*fixed_update)(smlt_application_t* self, float dt, void* user_data);
    void (*update)(smlt_application_t* self, float dt, void* user_data);
    void (*late_update)(smlt_application_t* self, float dt, void* user_data);

    /* Called once during shutdown. */
    void (*clean_up)(smlt_application_t* self, void* user_data);
} smlt_application_vtable_t;
/* Allocates an AppConfig with the engine's normal defaults (matches
 * `smlt::AppConfig config;` in C++). AppConfig has no user-declared
 * constructor, so cgen.py can't safely assume one is synthesizable; this
 * is hand-verified instead. Release it with smlt_app_config_destroy(). */
smlt_app_config_t* smlt_app_config_create_default(void);
/* `vtable` and `config` are both copied by value -- neither needs to
 * outlive this call. */
smlt_application_t* smlt_application_create_custom(const smlt_app_config_t* config,
                                                    void* platform_state,
                                                    const smlt_application_vtable_t* vtable,
                                                    void* user_data);
/* Release with the ordinary smlt_application_destroy() (Application is a
 * plain heap object, not manager-owned like StageNode/Asset). */

void smlt_application_set_user_data(smlt_application_t* self, void* user_data);
void* smlt_application_get_user_data(const smlt_application_t* self);